Repaint video controls when buffering during pause. https://bugs.webkit.org/show_bug.cgi?id=73957

Source/WebCore:

Pipes support for a new bufferingProgressed() method on MediaControls
elements. Allows controls to be repainted as data buffers when paused.

Patch by Dale Curtis <dalecurtis@chromium.org> on 2012-01-10
Reviewed by Hajime Morita.

Test: http/tests/media/video-buffering-repaints-controls.html

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::setNetworkState):
(WebCore::HTMLMediaElement::progressEventTimerFired):
* html/shadow/MediaControlRootElement.cpp:
(WebCore::MediaControlRootElement::bufferingProgressed):
* html/shadow/MediaControlRootElement.h:
* html/shadow/MediaControlRootElementChromium.cpp:
(WebCore::MediaControlRootElementChromium::bufferingProgressed):
* html/shadow/MediaControlRootElementChromium.h:
* html/shadow/MediaControls.h:

LayoutTests:

Adds video-buffering-repaints-controls test to verify the progress bar
repaints as new data is buffered when paused.

Patch by Dale Curtis <dalecurtis@chromium.org> on 2012-01-10
Reviewed by Hajime Morita.

* http/tests/media/video-buffering-repaints-controls.html: Added.
* platform/chromium-linux/http/tests/media/video-buffering-repaints-controls-expected.png: Added.
* platform/chromium-linux/http/tests/media/video-buffering-repaints-controls-expected.txt: Added.
* platform/chromium/test_expectations.txt:
* platform/gtk/test_expectations.txt:
* platform/mac/test_expectations.txt:
* platform/win/test_expectations.txt:

Canonical link: https://commits.webkit.org/92834@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104658 268f45cc-cd09-0410-ab3c-d52691b4dbfc