Source/WebCore/html/shadow/MediaControlRootElement.cpp
@@ -664,6 +664,14 @@ const AtomicString& MediaControlRootElement::shadowPseudoId() const
     return id;
 }
 
+void MediaControlRootElement::bufferingProgressed()
+{
+    // We only need to update buffering progress when paused, during normal
+    // playback playbackProgressed() will take care of it.
+    if (m_mediaController->paused())
+        m_timeline->setPosition(m_mediaController->currentTime());
+}
+
 }
 
 #endif
